<resources>
    <string name="app_name">Trinke</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_product_view">Détails</string>
    <string name="euros">€</string>
    <string name="title_activity_checkout">Paiement</string>

    <string name="addPayment">Ajouter un moyen de paiement</string>
    <string name="save">Sauvegarder</string>
    <string name="saverx">Save Rx</string>
    <string name="saveService">Sauvegarder le service</string>
    <string name="paymentMethods">Methodes de paiement</string>
    <string name="ok">OK</string>
    <string name="progressMessage">En cours&#8230;</string>
    <string name="endingIn">Votre carte finie... </string>
    <string name="crash_toast_text">oups</string>
    <string name="title_changelog">change log</string>
    <string name="changelog_close">Fermer</string>
    <string name="email_developer_">daniel.sautot@gmail.com</string>
    <string name="personal_website_">www.trinke.fr</string>
    <string name="contact_number">0686986046</string>
    <string name="similar_product">Regarder aussi</string>
    <string name="action_settings">Paramètre</string>
    <string name="slogan">Les rois de l\'Apero</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_details">Entrer votre carte</string>
    <string name="validationErrors">Erreur de validation</string>

</resources>
