<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingStart="8dp"
    android:paddingRight="8dp"
    android:paddingEnd="8dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.apero_area.aperoarea.activities.CheckoutActivity">


    <TextView android:id="@+id/payment_form_title"
        android:text="@string/addPayment"
        style="@style/Header.Light" />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/card_input_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/save"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/saverx"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:text="@string/saverx"
        />

    <Button
        android:id="@+id/saveWithService"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:text="@string/saveService"
        />

    <TextView android:id="@+id/token_list_title"
        android:text="@string/paymentMethods"
        android:layout_marginTop="12dp"
        style="@style/Header.Light" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <!--<com.stripe.android.view.CardInputWidget
android:id="@+id/card_input_widget"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_below="@+id/relativeLayout"
android:layout_alignParentRight="true"
android:layout_alignParentEnd="true"
android:layout_marginTop="41dp" />
-->

</LinearLayout>

